creating service variant
