# go/model_create_service_variant_schema.go
@@ -1,0 +1,17 @@
+/*
+ * CorpFees
+ *
+ * API for the Corp Fees central.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package fee_schedule_server
+
+type CreateServiceVariantSchema struct {
+
+	Fee float32 `json:"fee"`
+
+	ServiceAttributeValueIds []string `json:"serviceAttributeValueIds"`
+}
